--- a/css/css.css
+++ b/css/css.css
@@ -243,8 +243,8 @@ video{
     margin:0;
     padding:0;
     margin-bottom:-.2em;
-    max-width:960px;
-    height:auto;
+    width:100%;
+   
    
    
 
