--- a/css/css.css
+++ b/css/css.css
@@ -238,12 +238,9 @@ video{
 
 /*footer*/
 #design{
-   
-   
-    margin:0;
-    padding:0;
     margin-bottom:-.2em;
-    width:100%;
+    max-width:960px;
+    height:auto;
    
    
    
