--- a/css/css.css
+++ b/css/css.css
@@ -6,31 +6,35 @@ html, body{
     overflow-x:hidden;
 }
 
-main{
-    width:960px;
-    margin-right:auto;
-    margin-left:auto;
-    margin-bottom:0;
-   
-    
-    
-}
 
 
 
 
-#logo{
-    display:block;
-    max-width:960px;
-    height:auto;
-    margin-left:auto;
-    margin-right:auto;
-    padding:2em 0;
+
+
+
+.logo{
+ margin:2em;
 
 
 }
 
-h1{
+
+.hero{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+    width:100vw;
+    height:100vh;
+    background-position:center center;
+    background-image:url('../images/StlHero.jpg');
+    background-size:cover;
+    background-repeat:no-repeat;
+    
+}
+
+/*h1{
     
   position:relative;
   left:4.1em;
@@ -58,7 +62,7 @@ h1{
    
    
     
-}
+}*/
 
 #sticky{
     position:sticky;
@@ -91,8 +95,9 @@ p{
 }
 /*---nav----*/
 
-#flexcontainer{
+.flexcontainer{
     display:flex;
+    flex-direction:row;
     justify-content: center;
    
 
@@ -159,8 +164,13 @@ nav a:active{
 
 
 
-nav ul.hide{
+.hide{
     display:none;
+}
+
+.open{
+    display:initial;
+
 }
 }
 
@@ -179,7 +189,7 @@ nav ul.hide{
 }
 
 
-#main_wrapper{
+.main_wrapper{
     max-width:960px;
     height:auto;
 
@@ -188,7 +198,7 @@ nav ul.hide{
 
 
 
-#clearfix:after{
+.clearfix:after{
     content:"";
     display:table;
     clear:both;
