--- a/css/css.css
+++ b/css/css.css
@@ -21,15 +21,12 @@ html, body{
 /*----header--------*/
 
 .logo{
-    margin:3em;
+    margin:1.5em;
    }
 
 /*---typography---*/
 
-.large_text{
 
-
-}
 
 .large_text a{
     margin:7em;
@@ -66,12 +63,11 @@ nav{
 
 
 
-
+/*---hero image---*/
 .hero{
     display:flex;
     justify-content:center;
-    
-    width:100vw;
+     width:100vw;
     height:100vh;
     background-position:center center;
     background-image:url('../images/StlHero.jpg');
@@ -130,14 +126,7 @@ nav{
 
 /*---nav----*/
 
-.flexcontainer{
-    display:flex;
-    flex-direction:row;
-    justify-content: center;
-   
 
-
-}
 
 nav{
     border-top:solid 2px #000;
@@ -153,7 +142,7 @@ nav ul{
 
 
 nav ul li{
-    display:inline-block;
+    display:block;
     list-style-type:none;
     padding:0;
     margin:0;
@@ -162,11 +151,11 @@ nav ul li{
 
 }
 nav ul li a {
-    display:inline-block;
+    display:block;
     text-decoration: none;
     color:#b0afaf;
     font-size:1em;
-    padding:.8em  3em;
+    padding:.5rem  4%;
     margin:0;
    
    
@@ -174,22 +163,29 @@ nav ul li a {
 
 
 nav a:hover{
-    color:#000;
+    color:#fff;
     font-weight:bold ;
     background-color:#b0afaf;
+   
     
 
 }
 nav a:active{
-    color:#000;
+    color:#fff;
     font-weight:bold ;
     background-color:#b0afaf;
 }
 
 
+.large_text a:hover{
+    text-shadow: #b0afaf;
+
+}
 
 
-/*------*/
+
+
+/*----------------------------------------------*/
 
 .contentBox{
     padding:1em;
@@ -214,6 +210,8 @@ nav a:active{
     display:table;
     clear:both;
 }
+
+
 
 /*----Blog Style---*/
 
@@ -252,6 +250,8 @@ nav a:active{
     margin-top:190px;
 
 }
+
+
 /*---Portfolio--*/
 
 video{
@@ -334,7 +334,6 @@ footer p{
 footer{
     border-top:solid 2em#b0afaf;
     background-color:#000;
-    text-align:center;
     padding-bottom:2em;
   
 }
@@ -379,9 +378,12 @@ fieldset{
 }
 
 
-/*querries*/
+/*--------------querries-----------------------------*/
 
-@media screen and (min-width:320px){
+
+/*-------------------mobile-------*/
+
+@media (min-width:320px){
 
 .hero{
     
@@ -390,6 +392,10 @@ fieldset{
 
     
 /*Nav Button and menu*/
+
+.center{
+    text-align: center;
+}
 
 nav button{
     background-color:transparent;
@@ -400,24 +406,28 @@ nav button{
 
 }
 
-.hide{
+nav ul.hide{
     display:none;
 }
 
-.open{
-    display:initial;
+
+
+.flex_column{
+    display:flex;
+    flex-direction:column;
+    
+    }
+
+  
+
 
 }
 
-large_text{
+
+/*---desktop------*/
 
 
-}
-
-
-}
-
-@media screen and (min-width:601px){
+@media (min-width:601px){
 
 fieldset{
     margin-top:3rem;
@@ -428,11 +438,14 @@ fieldset{
     margin:2em 1em 0 0;
 }
     
-   
+ 
+
+/*--hero image--*/
 .hero{
     align-items:center;
     text-align:center;
 }
+
 .large_text a{
     margin:7em;
     padding:0;
@@ -444,6 +457,40 @@ fieldset{
 }
 
 
+
+
+
+/*---nav---*/
+
+nav ul.flexcontainer{
+    display:flex;
+    flex-direction:row;
+    justify-content: center;
+    flex-wrap:wrap;
+    padding:0;
+   
+
+
+}
+
+.flexcontainer{
+    display:flex;
+    flex-direction:row;
+    justify-content: center;
+    flex-wrap:wrap;
+    padding:0;
+
+}
+
+.active{
+    margin:auto;
+}
+
+
+
+nav button{
+    display:none;
+}
 
 }
 
