--- a/css/css.css
+++ b/css/css.css
@@ -617,6 +617,7 @@ nav button{
     grid-template-rows: auto;
     grid-gap:20px;
     margin-top:8em;
+    margin-bottom:20em;
     justify-items: center;
     
 
